--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.0.1",
+    "ionic": "^4.12.0",
     "lodash": "^4.17.11",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
