--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-android-support-gradle-release": "^3.0.0",
     "core-js": "^2.5.4",
     "firebase": "^6.0.1",
     "ionic": "^4.12.0",
