--- a/package.json
+++ b/package.json
@@ -65,5 +65,10 @@
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-android-support-gradle-release": {}
+    }
+  }
 }
