--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@capacitor/cli": "1.0.0-beta.22",
     "@capacitor/core": "1.0.0-beta.22",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/facebook": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-android-support-gradle-release": "^3.0.0",
+    "cordova-plugin-facebook4": "4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.0.1",
     "ionic": "^4.12.0",
@@ -42,7 +44,7 @@
     "@angular-devkit/build-angular": "~0.13.8",
     "@angular-devkit/core": "~7.3.8",
     "@angular-devkit/schematics": "~7.3.8",
-    "@angular/cli": "~7.3.8",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
@@ -68,7 +70,11 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-android-support-gradle-release": {}
+      "cordova-android-support-gradle-release": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "2326669580935319",
+        "APP_NAME": "japan-info-jobs"
+      }
     }
   }
 }
