Removed cordova platform and changed appId and appName in capacitor.config.json

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "jobs-app-ionic",
+  "appId": "io.jonnyramen.jobsapp",
+  "appName": "Japan Info Jobs",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www"
