Made some updates to Facebook plugin

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
       "cordova-android-support-gradle-release": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "2326669580935319",
-        "APP_NAME": "japan-info-jobs"
+        "APP_NAME": "Japan Info Jobs"
       }
     }
   }
