--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "cordova-android-support-gradle-release": "^3.0.0",
+    "cordova-android": "8.0.0",
+    "cordova-android-support-gradle-release": "3.0.0",
     "cordova-plugin-facebook4": "4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.0.1",
@@ -55,6 +56,12 @@
     "@types/lodash": "^4.14.126",
     "@types/node": "~12.0.0",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -73,8 +80,21 @@
       "cordova-android-support-gradle-release": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "2326669580935319",
-        "APP_NAME": "Japan Info Jobs"
-      }
-    }
+        "APP_NAME": "Japan Info Jobs",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.40.0"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
