--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/core": "1.0.0-beta.22",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.5.1",
+    "@ionic-native/local-notifications": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -78,12 +79,6 @@
   "cordova": {
     "plugins": {
       "cordova-android-support-gradle-release": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "2326669580935319",
-        "APP_NAME": "Japan Info Jobs",
-        "FACEBOOK_HYBRID_APP_EVENTS": "false",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.40.0"
-      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -92,7 +87,11 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "2326669580935319",
+        "APP_NAME": "Japan Info Jobs"
+      }
     },
     "platforms": [
       "android"
