--- a/package.json
+++ b/package.json
@@ -87,11 +87,7 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-local-notification": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "2326669580935319",
-        "APP_NAME": "Japan Info Jobs"
-      }
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
