--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "learn-japanese",
+  "appName": "Japanese Skill",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www"
