--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/lab": "^2.0.2",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-facebook4": "4.2.1",
     "core-js": "^2.5.4",
