--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/core": "1.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.8.0",
+    "@ionic-native/native-storage": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
