--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic/lab": "^2.0.2",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-facebook4": "4.2.1",
     "cordova-plugin-nativestorage": "2.3.2",
     "core-js": "^2.5.4",
@@ -95,7 +96,8 @@
       "cordova-plugin-nativestorage": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
